envoy-config-9000.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: kwaf
data:
  envoy.yaml: |
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 19000 }
    stats_sinks:
    - name: envoy.statsd
      typed_config:
        "@type": type.googleapis.com/envoy.config.metrics.v3.StatsdSink
        address:
          socket_address:
            address: 127.0.0.1
            port_value: 8125
        prefix: envoy.statsd.metrics
    stats_flush_interval: 60s
    stats_config:
      stats_tags:
      - tag_name: classifier
        regex: "^\\w+?(?=\\.).*?\\.(classifier\\.(.+?)\\.)(\\w|\\.)+?$"
      - tag_name: code
        regex: ".*enforcer\\.rater_response_status(_([^\\.]+))?"
      - tag_name: protection
        regex: "^\\w+?(?=\\.).*?\\.(protection\\.(.+?)\\.)\\w+?$"
      - tag_name: type
        regex: ".*enforcer\\.downstream_rq(_([^\\.]+))?"
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 9000
          filter_chains:
          - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: envoy_stats
                http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                    - match:
                        prefix: "/"
                      route:
                        cluster: enforcer_cluster
        - name: lst-metrics
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 19010
          filter_chains:
          - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: waas_metrics
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: backend
                    domains:
                    - "*"
                    routes:
                    - match:
                        prefix: "/stats/prometheus"
                      route:
                        cluster: waas_metrics
                    - match:
                        prefix: "/metrics"
                      route:
                        cluster: waas_metrics
                        regex_rewrite:
                          pattern:
                            regex: metrics
                          substitution: stats/prometheus?text_readouts
                    response_headers_to_remove:
                    - Server
                http_filters:
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                server_header_transformation: PASS_THROUGH
      clusters:
        - name: waas_metrics
          type: STATIC
          connect_timeout: 1s
          load_assignment:
            cluster_name: waas_metrics
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19000
        - name: enforcer_cluster
          connect_timeout: 0.25s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: enforcer
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: waas-enforcer.kwaf.svc.cluster.local
                      port_value: 80
          # ### Application Cluster - defined by customer
          # - name: httpbin_cluster
          #   connect_timeout: 1s
          #   type: STRICT_DNS
          #   lb_policy: ROUND_ROBIN
          #   load_assignment:
          #     cluster_name: httpbin
          #     endpoints:
          #       - lb_endpoints:
          #           - endpoint:
          #               address:
          #                 socket_address:
          #                   address: httpbin.test.svc.cluster.local
          #                   port_value: 80
---
