envoy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: kwaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:dev
        ports:
        - containerPort: 9000
          name: vip
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy/envoy.yaml
          subPath: envoy.yaml
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: kwaf
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9000
  selector:
    app: envoy
